--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>My Resume</h2>
-                    <button class="resume"><a href="Resume/Raman.docx">Download Resume</a> </button>
+                    <button class="resume"><a href="Resume/Ramanpreet.pdf">Download Resume</a> </button>
 				</div>
 			</div>
 			<div class="row">
