--- a/index.html
+++ b/index.html
@@ -42,10 +42,21 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
+        
+        <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-5V98G8B');</script>
+        <!-- End Google Tag Manager -->
 
 	</head>
 	<body>
-		
+		<!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5V98G8B"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 	<div class="fh5co-loader"></div>
 	
 	<div id="page">	
@@ -112,7 +123,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>My Resume</h2>
-                    <button class="resume"><a href="Resume/Raman.docx">Download Resume</a> </button>
+                    <button class="resume"><a href="Resume/Ramanpreet.pdf">Download Resume</a> </button>
 				</div>
 			</div>
 			<div class="row">
