--- a/index.html
+++ b/index.html
@@ -11,17 +11,6 @@
 
 
   	<!-- Facebook and Twitter integration -->
-<!--
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
--->
 
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
@@ -72,10 +61,9 @@
 							<h3><span>Web Developer /Designer</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
-									<li><a href="#"><i class="icon-twitter2"></i></a></li>
-									<li><a href="#"><i class="icon-facebook2"></i></a></li>
-									<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-									<li><a href="#"><i class="icon-dribbble2"></i></a></li>
+									<li><a href="#"><i class="icon-skype2"></i></a></li>
+									<li><a href="https://github.com/Raman1995"><i class="icon-github"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/ramanpreetkaur29/"><i class="icon-linkedin2"></i></a></li>
 								</ul>
 							</p>
 						</div>
@@ -107,11 +95,10 @@
 					<p>As I started this profession with freelancing, the edge to go over the limitations of being the solo player pushed me into pursing my post graduation in wed design & development.This has blessed me with over the edge experience regarding web designing and has given me the upper hand when it comes to following the latest trends of techno field. </p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter2"></i></a></li>
-							<li><a href="#"><i class="icon-facebook3"></i></a></li>
+							<li><a href="#"><i class="icon-skype2"></i></a></li>
+							<li><a href="https://github.com/Raman1995"><i class="icon-github"></i></a></li>
 							<li><a href="https://www.linkedin.com/in/ramanpreetkaur29/"><i class="icon-linkedin2"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble2"></i></a></li>
-						</ul>
+							</ul>
 					</p>
 				</div>
 			</div>
@@ -206,7 +193,7 @@
 					<div class="col-md-4 text-center">
 						<div class="feature-left">
 							<span class="icon">
-								<i class="icon-paintbrush"></i>
+								<i class="icon-html-five2"></i>
 							</span>
 							<div class="feature-copy">
 								<h3>Web Design</h3>
@@ -218,7 +205,7 @@
 					<div class="col-md-4 text-center">
 						<div class="feature-left">
 							<span class="icon">
-								<i class="icon-briefcase"></i>
+								<i class="icon-android"></i>
 							</span>
 							<div class="feature-copy">
 								<h3>Android Application Development</h3>
@@ -246,7 +233,7 @@
 
 						<div class="feature-left">
 							<span class="icon">
-								<i class="icon-bargraph"></i>
+								<i class="icon-codepen"></i>
 							</span>
 							<div class="feature-copy">
 								<h3>Web Developent</h3>
@@ -271,7 +258,7 @@
 					<div class="col-md-4 text-center">
 						<div class="feature-left">
 							<span class="icon">
-								<i class="icon-chat"></i>
+								<i class="icon-picture"></i>
 							</span>
 							<div class="feature-copy">
 								<h3>Photo Editting</h3>
@@ -389,15 +376,15 @@
 			</div>
 			<div class="row">
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-1.jpg);">
+					<a href="#" class="work" style="background-image: url(images/newsportal.jpg);">
 						<div class="desc">
 							<h3>NewsPortal</h3>
-							<span>php</span>
+							<span>php project</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-2.jpg);">
+					<a href="#" class="work" style="background-image: url(images/Crime-Report.jpg);">
 						<div class="desc">
 							<h3>Crime Report</h3>
 							<span>Php</span>
@@ -405,7 +392,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-3.jpg);">
+					<a href="#" class="work" style="background-image: url(images/bloodbank.png);">
 						<div class="desc">
 							<h3>Blood Bank</h3>
 							<span>Android</span>
@@ -413,7 +400,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-4.jpg);">
+					<a href="#" class="work" style="background-image: url(images/beauty.jpg);">
 						<div class="desc">
 							<h3>Responsive Site Design</h3>
 							<span>HTML & CSS</span>
@@ -421,15 +408,15 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-5.jpg);">
+					<a href="#" class="work" style="background-image: url(images/mobile.jpg);">
 						<div class="desc">
-							<h3>Project Name</h3>
+							<h3>Mobile Store</h3>
 							<span>ASP.Net</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-6.jpg);">
+					<a href="#" class="work" style="background-image: url(images/movie.png);">
 						<div class="desc">
 							<h3>Movie App</h3>
 							<span>Android</span>
@@ -437,7 +424,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-7.jpg);">
+					<a href="#" class="work" style="background-image: url(images/shopsmart.JPG);">
 						<div class="desc">
 							<h3>Smart Shop</h3>
 							<span>Wordpress</span>
@@ -445,7 +432,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-8.jpg);">
+					<a href="#" class="work" style="background-image: url(images/educature.JPG);">
 						<div class="desc">
 							<h3>Educature</h3>
 							<span>Capestone</span>
@@ -463,7 +450,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Hire Me!</h2>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
+					
 					<p><a href="#" class="btn btn-default btn-lg">Contact Us</a></p>
 				</div>
 			</div>
@@ -471,7 +458,7 @@
 	</div>
 
 	<div id="fh5co-consult">
-		<div class="video fh5co-video" style="background-image: url(images/cover_bg_1.jpg);">
+		<div class="video fh5co-video" style="background-image: url(images/Profile.jpg);">
 			<div class="overlay"></div>
 		</div>
 		<div class="choose animate-box">
@@ -552,3 +539,5 @@
 	
 
 
+
+https://raman1995.github.io/
