--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 									<span class="company">Conestoga College - 2018 - 2019</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>The primary focus of the program is on user-centered design supported by extensive back-end programming and front-end use of graphic design, multimedia, video, animation, and e-commerce applications to facilitate a fully functional website. Students will apply human interface guidelines, standard based structures, and design and development principles to create accessible, usable, and captivating web experiences geared to today's marketplace.</p>
 								</div>
 							</div>
 						</li>
@@ -170,7 +170,7 @@
 									<span class="company">Rayat and Bahra College of Engineering and Nano Technology</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>The Bachelor of Computer Science or Bachelor of Science in Computer Science is a type of bachelor's degree, usually awarded after three or four years of collegiate study in computer science, but possibly awarded in fewer years depending on factors such as an institution's course requirements and academic calendar.</p>
 								</div>
 							</div>
 						</li>
@@ -197,8 +197,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Web Design</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-							</div>
+								</div>
 						</div>
 					</div>
 
@@ -209,8 +208,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Android Application Development</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-							</div>
+								</div>
 						</div>
 
 					</div>
@@ -220,9 +218,8 @@
 								<i class="icon-search"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Analytics</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-							</div>
+								<h3>Google Analytics</h3>
+								</div>
 						</div>
 					</div>
 				</div>
@@ -237,8 +234,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Web Developent</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-							</div>
+								</div>
 						</div>
 
 					</div>
@@ -250,8 +246,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Web Marketing</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-							</div>
+								</div>
 						</div>
 
 					</div>
@@ -262,8 +257,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Photo Editting</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-							</div>
+								</div>
 						</div>
 					</div>
 				</div>
@@ -379,7 +373,8 @@
 					<a href="#" class="work" style="background-image: url(images/newsportal.jpg);">
 						<div class="desc">
 							<h3>NewsPortal</h3>
-							<span>php project</span>
+							<span>Php</span>
+                            <p>Created a Newsportal website using core php, html, css and javascript.This website was having Different news Types For all aged people. </p>
 						</div>
 					</a>
 				</div>
@@ -388,6 +383,8 @@
 						<div class="desc">
 							<h3>Crime Report</h3>
 							<span>Php</span>
+                            <p>Created a Newsportal website using core php, html, css and javascript.This website was having Different news Types For all aged people. 
+                                    </p>
 						</div>
 					</a>
 				</div>
@@ -396,6 +393,7 @@
 						<div class="desc">
 							<h3>Blood Bank</h3>
 							<span>Android</span>
+                            <p>Worked on Blood Bank Application. It was based on keeping the record of blood group in blood bank and the doners near by.</p>
 						</div>
 					</a>
 				</div>
@@ -404,6 +402,7 @@
 						<div class="desc">
 							<h3>Responsive Site Design</h3>
 							<span>HTML & CSS</span>
+                            <p>This is the responsive website designed in html and css. This is the beauty products website where user can view the products and they can also access the services provided by them.ss </p>
 						</div>
 					</a>
 				</div>
@@ -412,6 +411,7 @@
 						<div class="desc">
 							<h3>Mobile Store</h3>
 							<span>ASP.Net</span>
+                            <p>This project is developed in Asp.Net and C#. This Is the online store for buying mobiles.  </p>
 						</div>
 					</a>
 				</div>
@@ -420,6 +420,7 @@
 						<div class="desc">
 							<h3>Movie App</h3>
 							<span>Android</span>
+                            <p>This project is build in android. The functionality of this project is to Book the movies online.</p>
 						</div>
 					</a>
 				</div>
@@ -428,6 +429,7 @@
 						<div class="desc">
 							<h3>Smart Shop</h3>
 							<span>Wordpress</span>
+                            <p>This is the E-Commerce website for online store of mobile, tablets and laptops. Technology used in this was woocommerce, wordpress. </p>
 						</div>
 					</a>
 				</div>
@@ -436,6 +438,7 @@
 						<div class="desc">
 							<h3>Educature</h3>
 							<span>Capestone</span>
+                            <p>This is the Online site for E-Learning. In this user can buy the courses and Tutorials can be created by Instructors. It is Developed by using php and Mysql. </p>
 						</div>
 					</a>
 				</div>
@@ -443,7 +446,6 @@
 		</div>
 	</div>
 
-	
 	<div id="fh5co-started" class="fh5co-bg-dark">
 		<div class="overlay"></div>
 		<div class="container">
