--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 	<meta name="author" content="Ramanpreet Kaur" />
 
 
-  	<!-- Facebook and Twitter integration -->
+  	
 
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
 	
-	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
-	<!-- Icomoon Icon Fonts-->
+	
 	<link rel="stylesheet" href="css/icomoon.css">
 	<!-- Bootstrap  -->
 	<link rel="stylesheet" href="css/bootstrap.css">
@@ -25,7 +24,6 @@
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
 
-	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
@@ -70,7 +68,6 @@
 					</div>
 				</div>
 			</div>
-		
 	</header>
 
 	<div id="fh5co-about" class="animate-box">
@@ -166,8 +163,8 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
                             <div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Bachelors Degree - 2013 - 2017</h3>
-									<span class="company">Rayat and Bahra College of Engineering and Nano Technology</span>
+									<h3 class="timeline-title">Bachelors Degree </h3>
+									<span class="company">Rayat and Bahra College of Engineering and Nano Technology - 2013 - 2017</span>
 								</div>
 								<div class="timeline-body">
 									<p>The Bachelor of Computer Science or Bachelor of Science in Computer Science is a type of bachelor's degree, usually awarded after three or four years of collegiate study in computer science, but possibly awarded in fewer years depending on factors such as an institution's course requirements and academic calendar.</p>
@@ -287,16 +284,16 @@
 					<div class="chart" data-percent="89"><span><strong>PHP</strong>89%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="85"><span><strong>MySQL</strong>95%</span></div>
+					<div class="chart" data-percent="85"><span><strong>MySQL</strong>80%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>AngularJS</strong>80%</span></div>
+					<div class="chart" data-percent="90"><span><strong>AngularJS</strong>90%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="85"><span><strong>ASP.Net</strong>85%</span></div>
+					<div class="chart" data-percent="85"><span><strong>ASP.Net</strong>80%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>Java</strong>80%</span></div>
+					<div class="chart" data-percent="90"><span><strong>Java</strong>90%</span></div>
 				</div>
 			</div>
 			<div class="row">
@@ -538,8 +535,3 @@
 	<script src="js/main.js"></script>
     </body>
 </html>
-	
-
-
-
-https://raman1995.github.io/
